# Diagnostician

./: .env.example  .gitignore  README.md  StatementOfIntent.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_ingestion_scaling.py
backend/diagnostician/: __init__.py
backend/diagnostician/api/: main.py
backend/diagnostician/core/: config.py  schemas.py  windows_platform.py
backend/diagnostician/db/: models.py  session.py
backend/diagnostician/ingestion/: __init__.py  cli.py  parser.py
backend/diagnostician/llm/: __init__.py  ollama_client.py
backend/diagnostician/services/: scoring.py  store.py  validation.py  workflows.py
backend/diagnostician/setup/: __init__.py  hardware.py
cases/source/: demo_aortic_dissection_case.json  demo_appendicitis_case.json  demo_dka_case.json  demo_ectopic_pregnancy_case.json  demo_inferior_stemi_case.json  demo_meningitis_case.json  demo_obstructive_pyelonephritis_case.json  demo_thyroid_storm_case.json  demo_upper_gi_bleed_case.json  prototype_pe_case.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
godot/: project.godot
godot/scenes/: main.tscn
godot/scripts/: Main.gd
scripts/: setup-backend.ps1  smoke-compose.ps1
tests/: helpers.py  test_api.py  test_hardware.py  test_ingestion.py  test_smoke.py  test_workflow.py
