[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagnostician"
version = "0.1.0"
description = "Source-grounded diagnostic reasoning game prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "httpx>=0.27",
  "langchain-core>=0.3",
  "langgraph>=0.2",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24"
]
pdf = [
  "pypdf>=5.0"
]
multicare = [
  "pyarrow>=16.0"
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
addopts = "-q"
